--- a/storage/config.json
+++ b/storage/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "*",
-    "token": "Njg5NzQ4MzQ3MjU4Nzk4MDgw.XnH6dg.b3Raafjy48T8WFhbGly-HRaWxx8"
+    "token": "Njg5NzQ4MzQ3MjU4Nzk4MDgw.XnIBlg.uoz3cAInV7OZqpDhr4-MXfEvVdY"
 }
